# yugami

./: .gitignore  Cargo.toml  README.md  ai_usage.md
common/: Cargo.toml
common/src/: crypto.rs  lib.rs
debug/src/: lib.rs
kekkai/: Cargo.toml
kekkai/src/: crypto.rs  lib.rs  payload.rs  random.rs
kekkai/src/crypto/: mod.rs  xor.rs
packer/: Cargo.toml  build.rs
packer/src/: debug.rs  main.rs  random.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs  random.rs  xor.rs
stub/: Cargo.toml
stub/src/: handlers.rs  lru.rs  main.rs  phase.rs
stub/src/handlers/: lock.rs  lru.rs  mod.rs  page_fault.rs  tls.rs
stub/src/mapper/: error.rs  mapper.rs  mod.rs  tls.rs
stub/src/resolvers/: import_dir.rs  mod.rs  reloc.rs
