[package]
name = "stub"
version = "0.1.0"
edition = "2024"

[dependencies]
debug.workspace = true
kekkai.workspace = true
pe-parser = "0.7.0"
proc_macros.workspace = true
windows-sys = {
  version = "0.61.2",
  features = [
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming"
  ]
}
